--- a/src/DataAccess/DataAccess.csproj
+++ b/src/DataAccess/DataAccess.csproj
@@ -8,6 +8,10 @@
       <PackageReference Include="Dapper" Version="2.0.78" />
       <PackageReference Include="Dapper.FluentMap" Version="2.0.0" />
       <PackageReference Include="Dapper.SqlBuilder" Version="2.0.78" />
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.1.13" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.13" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
     </ItemGroup>
 
